--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             .img5{
                 border-radius: 50%;
-             
+                background-color: lime;
             }
         }
         
