--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 flex-wrap: wrap;
             }
 
-            .img5{
+            .img{
                 border-radius: 50%;
-                background-color: lime;
+                background-color: red ;
             }
         }
         
